# inspect-gepa-bridge

./: .dockerignore  .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/workflows/: pr-and-main.yaml
src/inspect_gepa_bridge/: __init__.py  adapter.py  dataset.py  scoring.py  task_adapter.py  types.py
tests/: test_scoring.py  test_task_adapter.py
