[project]
name = "inspect-gepa-bridge"
version = "0.1.0"
description = "Generic bridge for Inspect AI tasks with GEPA optimization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inspect-ai>=0.3.144",
    "gepa>=0.0.24",
    "datasets>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inspect_gepa_bridge"]

[dependency-groups]
dev = [
    "basedpyright>=1.35.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-watcher>=0.4.0",
    "ruff>=0.14.0",
]

[tool.basedpyright]
ignore = ["**/*.ipynb"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
pythonVersion = "3.12"
reportMissingImports = "error"
reportAny = false
reportExplicitAny = false
reportPrivateUsage = false

executionEnvironments = [{ root = "tests", reportMissingTypeStubs = false }]

[tool.ruff]
exclude = ["**/*.ipynb"]
